j'ai fait une modif

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 </head>
 <body>
+    <!-- TEST TEST -->
     <header>
         <img class="imgLogo" src="./assets/logo.png"/>
         <div  class="searchBar">
